// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDetails components tests matches snapshot 1`] = `
<Fragment>
  <Row>
    <Col
      offset={2}
      span={20}
    >
      <div
        className="top-margin"
      >
        <ForwardRef>
          Test list
           
          <ForwardRef(MinusCircleOutlined)
            onClick={[MockFunction]}
          />
        </ForwardRef>
      </div>
    </Col>
  </Row>
  <ListContent
    actions={
      [
        <ForwardRef(DeleteOutlined)
          onClick={[MockFunction]}
        />,
      ]
    }
    movies={[]}
  />
</Fragment>
`;

exports[`ListDetails components tests matches snapshot with error 1`] = `
<div
  className="top-margin"
>
  <Error
    error={
      {
        "message": "test/error",
      }
    }
  />
</div>
`;

exports[`ListDetails components tests matches snapshot with loading 1`] = `
<div
  className="top-margin"
>
  <Loading />
</div>
`;
